--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,4 +5,19 @@ api-version: 1.19
 
 commands:
   fx:
-    description: /fx buy [数] で買うことができ /fx sell [数] で売ることができます
+    description: "FX command"
+    usage: "/fx <buy|sell|show>"
+    ##permission: fx.command.use
+    subcommands:
+      buy:
+        description: "Buy FX"
+        usage: "/fx buy <amount>"
+        ##permission: fx.command.buy
+      sell:
+        description: "Sell FX"
+        usage: "/fx sell <amount>"
+        ##permission: fx.command.sell
+      show:
+        description: "Show FX information"
+        usage: "/fx show"
+        ##permission: fx.command.show
