--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compileOnly 'net.essentialsx:EssentialsX:2.19.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.xerial:sqlite-jdbc:3.34.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+    implementation 'org.jsoup:jsoup:1.15.4'
 }
 
 def targetJavaVersion = 17
